changed the research page

--- a/research.html
+++ b/research.html
@@ -100,6 +100,7 @@
         <li data-target="#carousel-example-1z" data-slide-to="2"></li>
         <li data-target="#carousel-example-1z" data-slide-to="3"></li>
         <li data-target="#carousel-example-1z" data-slide-to="4"></li>
+        <li data-target="#carousel-example-1z" data-slide-to="5"></li>
     </ol>
     <!--/.Indicators-->
     <!--Slides-->
@@ -110,13 +111,9 @@
 
                 <!-- Content -->
                 <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                    <div>
-                        <h1 class="card-title pt-2 blue-text"><strong>3D Scene Reconstruction</strong></h1>
-                        <p><h3>The objective of this Scene Reconstruction technology is about taking the information of a scene in reality
-                           and computing a 3-dimensional model of it. This information provided are usually several pictures or a video of
-                           the scene. First, 3d sensing techniques on a grid basis would be used to get 3d images of the scene. Then certain
-                           algorithms would be used to connect the scenes together and form the 3d model.</h3></p>
-                    </div>
+                </div>
+                <div class="carousel-caption">
+                    <h1 class="blue-text"><strong>3D Scene Reconstruction</strong></h1>
                 </div>
                 <!-- Content -->
             </div>
@@ -128,22 +125,11 @@
 
                 <!-- Content -->
                 <div style="height:600px;"class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                    <div>
-                        <h1 class="card-title pt-2 blue-text"><strong>Recognition</strong></h1>
-                        <p><h3>The major problem of all sorts of vision technology is determining whether a specific thing is existing in
-                          or is happening in an image. Such problems are categorized into three: Object classification, where the computer
-                          has to recognize a certain object that it has learned; Identification, where a unique feature of an object is
-                          recognized (eg. fingerprints); Detection, where a certain condition needs to be detected by scanning.<br>
-                          Many brilliant algorithms are used to solve these problems, but still even the best of them struggle to deal
-                          with tiny stuff, like a pin. They also struggle with filtered images from most digital cameras.<br>
-                          Specialized tasks based on this technology include:<br>
-                          <strong>Content-based image retrieval</strong>, used to find images containing a specific content from hundreds
-                          of them.<br>
-                          <strong>Pose estimate</strong>, used to compute the position of an object.<br>
-                          <srtong>Face recognizing</strong>.<br>
-                          Etc.</h3></p>
-                    </div>
                 </div>
+                <div class="carousel-caption">
+                    <h1 class="blue-text"><strong>Recognition</strong></h1>
+                </div>
+
                 <!-- Content -->
             </div>
         </div>
@@ -154,15 +140,11 @@
 
                 <!-- Content -->
                 <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                    <div>
-                        <h1 class="card-title pt-2 blue-text"><strong>Motion Analysis</strong></h1>
-                        <p><h3>This technology is about processing a sequence of images or
-                           a video and calculate the velocity of an object or the
-                           camera. It supports tasks like tracking (follow movement
-                           of an object) and optical flow (determining how an object
-                           is moving relative to the scene).</h3></p>
-                    </div>
                 </div>
+                <div class="carousel-caption">
+                    <h1 class="blue-text"><strong>Motion Analysis</strong></h1>
+                </div>
+
                 <!-- Content -->
             </div>
         </div>
@@ -173,41 +155,45 @@
 
                 <!-- Content -->
                 <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                    <div>
-                        <h1 class="card-title pt-2 blue-text"><strong>Cell Phenotype Recognition</strong></h1>
-                        <p><h3>The Cell Phenotype Recognition is a type of classifying recognition that UCL focuses in. Its about observing the visible features
-                        called phenotypes from a segment of cells and classifying the cells. The process
-                        picks out features from the database and labells the cells. After that, all needed to do is to
-                        just classify them upon their features. This process sounds simple, but it has to deal with so much data that makes it impossible
-                        for manual operation. That's why we need computers to do it for us.</h3></p>
-                    </div>
                 </div>
+                <div class="carousel-caption">
+                    <h1 class="blue-text"><strong>Cell Phenotype Recognition</strong></h1>
+                </div>
+
                 <!-- Content -->
             </div>
         </div>
         <!--fifth slide-->
+        <!--sixth slide-->
+        <div class="carousel-item">
+            <div class="card card-image d-block w-100" style="background-image: url(img/mri.jpg); height:600px;" alt="Sixth slide">
+
+                <!-- Content -->
+                <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                </div>
+                <div class="carousel-caption">
+                    <h1 class="blue-text"><strong>Imaging with MRI</strong></h1>
+                </div>
+                <!-- Content -->
+            </div>
+        </div>
+        <!--/sixth slide-->
         <!--fourth slide-->
         <div class="carousel-item" interval:30000;>
             <div class="card card-image d-block w-100" style="background-image: url(img/image-understandingSystem.png); height:600px;" alt="Fourth slide">
 
                 <!-- Content -->
                 <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                    <div>
-                        <h1 class="card-title pt-2 blue-text"><strong>Image-Understanding</strong></h1>
-                        <p><h3>Image-understanding system, also called as IUS, contains three levels. The first is called the Low Level.
-                          It contains primitives like the sides, the shapes and their position. Going on there is the Intermediate Level
-                          containing the volumes, the boundaries, etc. Then there is the High Level which contains the scenes. These require
-                          a lot of information from further studies.<br>
-                          Other than that, techniques like inference and control are also used in IUS. Inference simply means to deduce new
-                          information from the facts already known, while control is the process that decides which technique should be used
-                          and when.</h3></p>
-                    </div>
+                </div>
+                <div class="carousel-caption">
+                    <h1 class="blue-text"><strong>Image-Understanding</strong></h1>
                 </div>
                 <!-- Content -->
             </div>
 
         </div>
         <!--fourth slide-->
+
     </div>
     <!--/.Slides-->
     <!--Controls-->
@@ -220,7 +206,6 @@
         <span class="sr-only">Next</span>
     </a>
     <!--/.Controls-->
-    
 </div>
 <!--/.Carousel Wrapper-->
                     <!-- Card -->
@@ -230,6 +215,246 @@
         </div>
     </main>
     <!-- /Start your project here-->
+
+
+
+
+
+
+    <!--Projects section v.3-->
+<section class="section extra-margins">
+
+  <hr>
+
+  <!--Grid row-->
+  <div class="row pt-5">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
+
+            <!--Image-->
+
+            <img src="img/sceneReconstruction.jpg" alt="Sample project image" class="img-fluid z-depth-2">
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 pl-lg-5 pb-4">
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-10 ">
+                    <h5 class="feature-title font-bold">3D Scene Reconstruction</h5>
+                    <p class="grey-text">The objective of this Scene Reconstruction technology is about taking the information of a scene in reality
+                       and computing a 3-dimensional model of it. This information provided are usually several pictures or a video of
+                       the scene. <br>First, 3d sensing techniques on a grid basis would be used to get 3d images of the scene. Then certain
+                       algorithms would be used to connect the scenes together and form the 3d model.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+        </div>
+        <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+    <hr>
+
+    <!--Grid row-->
+    <div class="row pt-5">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 mb-3">
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Recognition</h5>
+                    <p class="grey-text">The major problem of all sorts of vision technology is determining whether a specific thing is existing in
+                      or is happening in an image. Such problems are categorized into three: Object classification, where the computer
+                      has to recognize a certain object that it has learned; Identification, where a unique feature of an object is
+                      recognized (eg. fingerprints); Detection, where a certain condition needs to be detected by scanning.<br>
+                      Many brilliant algorithms are used to solve these problems, but still even the best of them struggle to deal
+                      with tiny stuff, like a pin. They also struggle with filtered images from most digital cameras.<br>
+                      Specialized tasks based on this technology include:<br>
+                      <strong>Content-based image retrieval</strong>, used to find images containing a specific content from hundreds
+                      of them.<br>
+                      <strong>Pose estimate</strong>, used to compute the position of an object.<br>
+                      <srtong>Face recognizing</strong>.<br>
+                      Etc.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 mb-3">
+
+            <!--Image-->
+            <img src="img/recognition.png" alt="Sample project image" class="img-fluid z-depth-2">
+
+        </div>
+        <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+<hr>
+
+    <!--Grid row-->
+    <div class="row pt-5">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
+
+            <!--Image-->
+            <img src="img/cellPhenotype.jpg" alt="Sample project image" class="img-fluid z-depth-2">
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 pl-lg-5 pb-4">
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-10 ">
+                    <h5 class="feature-title font-bold">Cell Phenotype Recognition</h5>
+                    <p class="grey-text">The Cell Phenotype Recognition is a type of classifying recognition that UCL focuses in. Its about observing the visible features
+                    called phenotypes from a segment of cells and classifying the cells. The process
+                    picks out features from the database and labells the cells. After that, all needed to do is to
+                    just classify them upon their features. This process sounds simple, but it has to deal with so much data that makes it impossible
+                    for manual operation. That's why we need computers to do it for us.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+        </div>
+        <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+    <hr>
+
+    <!--Grid row-->
+    <div class="row pt-5">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 mb-3">
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Motion Analysis</h5>
+                    <p class="grey-text">This technology is about processing a sequence of images or
+                       a video and calculate the velocity of an object or the
+                       camera. It supports tasks like tracking (follow movement
+                       of an object) and optical flow (determining how an object
+                       is moving relative to the scene).</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 mb-3">
+
+            <!--Image-->
+            <img src="img/motionAnalysis.png" alt="Sample project image" class="img-fluid z-depth-2">
+
+        </div>
+        <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+    <hr>
+
+        <!--Grid row-->
+        <div class="row pt-5">
+
+            <!--Grid column-->
+            <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
+
+                <!--Image-->
+                <img src="img/image-understandingSystem.png" alt="Sample project image" class="img-fluid z-depth-2">
+
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-lg-6 col-xl-7 pl-lg-5 pb-4">
+
+                <!--Grid row-->
+                <div class="row mb-3">
+                    <div class="col-10 ">
+                        <h5 class="feature-title font-bold">Image-Understanding</h5>
+                        <p class="grey-text">Image-understanding system, also called as IUS, contains three levels. The first is called the Low Level.
+                          It contains primitives like the sides, the shapes and their position. Going on there is the Intermediate Level
+                          containing the volumes, the boundaries, etc. Then there is the High Level which contains the scenes. These require
+                          a lot of information from further studies.<br>
+                          Other than that, techniques like inference and control are also used in IUS. Inference simply means to deduce new
+                          information from the facts already known, while control is the process that decides which technique should be used
+                          and when.</p>
+                    </div>
+                </div>
+                <!--Grid row-->
+
+            </div>
+            <!--Grid column-->
+
+        </div>
+        <!--Grid row-->
+
+        <hr>
+
+        <!--Grid row-->
+        <div class="row pt-5">
+
+            <!--Grid column-->
+            <div class="col-lg-6 col-xl-7 mb-3">
+
+                <!--Grid row-->
+                <div class="row mb-3">
+                    <div class="col-1 mr-1">
+                    </div>
+                    <div class="col-10">
+                        <h5 class="feature-title font-bold">Microstructure Imaging with Diffusion MRI</h5>
+                        <p class="grey-text">MRI, full name Magnetic Resonance Imaging, is a type of imaging technique mostly for medical uses, and is also
+                        one that UCL focuses on. The system first first recieves a responding signal from the tissue it wants to display (how to obtain the signal
+                        is another story so just leave it out), and makes a 3D model of it. It then shows an image of the model and finally goes through a process
+                       called fitting to make it display only a certain feature at a time. </p>
+                    </div>
+                </div>
+                <!--Grid row-->
+
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-lg-6 col-xl-5 mb-3">
+
+                <!--Image-->
+                <img src="img/mri.jpg" alt="Sample project image" class="img-fluid z-depth-2">
+
+            </div>
+            <!--Grid column-->
+
+        </div>
+        <!--Grid row-->
+</section>
+<!--Projects section v.3-->
 
     <!--Footer-->
     <footer class="page-footer indigo center-on-small-only">
