--- a/get-involved.html
+++ b/get-involved.html
@@ -69,7 +69,7 @@
         </nav>
 
         <!-- Intro Section -->
-        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/woman_on_laptop.jpg">
+        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/get-involved.jpg">
             <div class="full-bg-img">
                 <div class="container flex-center">
                     <div class="row pt-5 mt-3">
