--- a/history.html
+++ b/history.html
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-                    <h1 class="font-bold light-blue-text my-5">Timeline of Major Events:</h1>
+                    <h1 class="font-bold light-blue-text my-5">Timeline of Major Events</h1>
                 </div>
             </div>
         </div>
