--- a/impact.html
+++ b/impact.html
@@ -87,14 +87,10 @@
 
     <main>
         <div class="container">
+            <div class="col-md-12 text-center">
+                <h1 class="font-bold light-blue-text my-5">Our Best Projects</h1>
+            </div>
             <section class="section pb-3">
-
-                <!--Section heading-->
-                <h2 class="section-heading h1 pt-4"><strong>Our best projects</strong></h2>
-                <!--Section description-->
-                <p class="section-description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
                 <!--Grid row-->
                 <div class="row">
 
@@ -103,9 +99,14 @@
                         <div class="card card-image" style="background-image: url(img/IMG_8719.JPG);">
                             <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                 <div>
-                                    <h3 class="card-title py-3 font-bold"><strong>Automatic Inspection</strong></h3>
-                                    <p class="pb-3">Factories are increasingly relying less on man-power and more on robotic and automated systems. With factory robots that can 'see', defect recognition and quality control processes are greatly improved.</p>
-                                    <a class="btn btn-yellow btn-rounded" href='https://en.wikipedia.org/wiki/Automated_optical_inspection'><i class="fa fa-clone left"></i> Read More</a>
+                                    <h3 class="card-title py-3 font-bold">
+                                        <strong>Automatic Inspection</strong>
+                                    </h3>
+                                    <p class="pb-3">Factories are increasingly relying less on man-power and more on robotic and automated
+                                        systems. With factory robots that can 'see', defect recognition and quality control
+                                        processes are greatly improved.</p>
+                                    <a class="btn btn-yellow btn-rounded" href='https://en.wikipedia.org/wiki/Automated_optical_inspection'>
+                                        <i class="fa fa-clone left"></i> Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -117,9 +118,15 @@
                         <div class="card card-image" style="background-image: url(img/image-understandingSystem.png);">
                             <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                 <div>
-                                    <h3 class="card-title py-3 font-bold"><strong>Artificial Intelligence</strong></h3>
-                                    <p class="pb-3">Artifically Intelligent computers can, through machine learning, use visual data received from pictures or videos for example. Different and exciting data can be extracted from a picture or video if we analyse it using Vision and Imaging analysis. This allows more diverse and nuanced applications of AI possible.</p>
-                                    <a class="btn btn-blue btn-rounded" href='https://mbhs.edu/~lpiper/computer_vision03/visionai.html'><i class="fa fa-clone left"></i> Read More</a>
+                                    <h3 class="card-title py-3 font-bold">
+                                        <strong>Artificial Intelligence</strong>
+                                    </h3>
+                                    <p class="pb-3">Artifically Intelligent computers can, through machine learning, use visual data received
+                                        from pictures or videos for example. Different and exciting data can be extracted
+                                        from a picture or video if we analyse it using Vision and Imaging analysis. This
+                                        allows more diverse and nuanced applications of AI possible.</p>
+                                    <a class="btn btn-blue btn-rounded" href='https://mbhs.edu/~lpiper/computer_vision03/visionai.html'>
+                                        <i class="fa fa-clone left"></i> Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -131,9 +138,15 @@
                         <div class="card card-image" style="background-image: url(img/photos.jpg);">
                             <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                 <div>
-                                    <h3 class="card-title py-3 font-bold"><strong> Image Organisation</strong></h3>
-                                    <p class="pb-3">This is automatically categorising photos based on what is in the photo. This, for example, can allow a user to search through a library of photos using keywords; photos including objects or features that relate to that word can be given without any need to manually tag the photo previously.</p>
-                                    <a class="btn btn-red btn-rounded" href='https://en.wikipedia.org/wiki/Object_categorization_from_image_search'><i class="fa fa-clone left"></i> Read More</a>
+                                    <h3 class="card-title py-3 font-bold">
+                                        <strong> Image Organisation</strong>
+                                    </h3>
+                                    <p class="pb-3">This is automatically categorising photos based on what is in the photo. This, for example,
+                                        can allow a user to search through a library of photos using keywords; photos including
+                                        objects or features that relate to that word can be given without any need to manually
+                                        tag the photo previously.</p>
+                                    <a class="btn btn-red btn-rounded" href='https://en.wikipedia.org/wiki/Object_categorization_from_image_search'>
+                                        <i class="fa fa-clone left"></i> Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -144,9 +157,14 @@
                         <div class="card card-image" style="background-image: url(img/aircraft2.jpg);">
                             <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                 <div>
-                                    <h3 class="card-title py-3 font-bold"><strong>Vehicles and Driving</strong></h3>
-                                    <p class="pb-3">'Seeing' cars, planes, drones and amphibius vehicles have many exciting possible uses. Vision in these vehicles can enhance autonomous vehicles, driving safety, navigation, surveillance and military applications (for example, guided missiles).</p>
-                                    <a class="btn btn-green btn-rounded" href='https://towardsdatascience.com/teaching-cars-to-see-vehicle-detection-using-machine-learning-and-computer-vision-54628888079a'><i class="fa fa-clone left"></i> Read More</a>
+                                    <h3 class="card-title py-3 font-bold">
+                                        <strong>Vehicles and Driving</strong>
+                                    </h3>
+                                    <p class="pb-3">'Seeing' cars, planes, drones and amphibius vehicles have many exciting possible uses.
+                                        Vision in these vehicles can enhance autonomous vehicles, driving safety, navigation,
+                                        surveillance and military applications (for example, guided missiles).</p>
+                                    <a class="btn btn-green btn-rounded" href='https://towardsdatascience.com/teaching-cars-to-see-vehicle-detection-using-machine-learning-and-computer-vision-54628888079a'>
+                                        <i class="fa fa-clone left"></i> Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -156,9 +174,14 @@
                         <div class="card card-image" style="background-image: url(img/medical.jpg);">
                             <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                 <div>
-                                    <h3 class="card-title py-3 font-bold"><strong>Medical Image Processing</strong></h3>
-                                    <p class="pb-3">Image inspection and analysis can help doctors analyse patient images from all kinds of scanning methods such as endoscopy, MRI and ultrasound scans, by identifying and enhancing certain features in an image.</p>
-                                    <a class="btn btn-teal btn-rounded" href='https://en.wikipedia.org/wiki/Medical_imaging'><i class="fa fa-clone left"></i> Read More</a>
+                                    <h3 class="card-title py-3 font-bold">
+                                        <strong>Medical Image Processing</strong>
+                                    </h3>
+                                    <p class="pb-3">Image inspection and analysis can help doctors analyse patient images from all kinds
+                                        of scanning methods such as endoscopy, MRI and ultrasound scans, by identifying and
+                                        enhancing certain features in an image.</p>
+                                    <a class="btn btn-teal btn-rounded" href='https://en.wikipedia.org/wiki/Medical_imaging'>
+                                        <i class="fa fa-clone left"></i> Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -170,9 +193,14 @@
                         <div class="card card-image" style="background-image: url(img/city.jpg);">
                             <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                 <div>
-                                    <h3 class="card-title py-3 font-bold"><strong>Visual Effects</strong></h3>
-                                    <p class="pb-3">Visual Effects in film and animation have progressed impressively over the past few decades thanks to the financial backing of the film industry. Vision and Imaging technologies can be used to enhance visual effects in both the filming and editing of a movie.</p>
-                                    <a class="btn btn-orange btn-rounded" href='https://en.wikipedia.org/wiki/Visual_effects'><i class="fa fa-clone left"></i> Read More</a>
+                                    <h3 class="card-title py-3 font-bold">
+                                        <strong>Visual Effects</strong>
+                                    </h3>
+                                    <p class="pb-3">Visual Effects in film and animation have progressed impressively over the past few decades
+                                        thanks to the financial backing of the film industry. Vision and Imaging technologies
+                                        can be used to enhance visual effects in both the filming and editing of a movie.</p>
+                                    <a class="btn btn-orange btn-rounded" href='https://en.wikipedia.org/wiki/Visual_effects'>
+                                        <i class="fa fa-clone left"></i> Read More</a>
                                 </div>
                             </div>
                         </div>
