Added home page research cards.

--- a/index.html
+++ b/index.html
@@ -159,12 +159,89 @@
                         recording at 30 frames per second will provide 27 Mega Bits of information per second. That's 27
                         million bits of information per second, and that isn't even in HD!</p>
                     <p>Can you guess out how much information a HD video running at 30 frames per second will provide? (1920x1080
-                        pixels)</p>
+                        pixels)
+                    </p>
                     <a class="btn btn-indigo btn-lg" onclick="showAnswer()">Reveal the Answer</a>
                     <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
                     <!-- 16:9 aspect ratio -->
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YUaEPV7Qz1c"></iframe>
+                    </div>
+                    <h1 class="font-bold light-blue-text my-5">Our Work</h1>
+
+                    <div class="row">
+                        <div class="col">
+                            <!--Card-->
+                            <div class="card">
+                                <!--Card image-->
+                                <div class="view overlay hm-white-slight">
+                                    <img src="img/recognition_thumbnail.png" class="img-fluid" alt="Image of Research">
+                                    <a href="">
+                                        <div class="mask"></div>
+                                    </a>
+                                </div>
+                                <!--Card content-->
+                                <div class="card-body">
+                                    <!--Title-->
+                                    <h4 class="card-title">Facial Recognition</h4>
+                                    <!--Text-->
+                                    <p class="card-text">Most facial recognition algorithms struggle if the persons face is not in the exact same
+                                        position as the one in the database. Our research tries to avoid this by allowing
+                                        the computer to predict how a person will look from different angles.</p>
+                                    <a href="/research.html#recognition" class="btn btn-primary">Learn More</a>
+                                </div>
+                            </div>
+                            <!--/.Card-->
+                        </div>
+
+                        <div class="col">
+                            <!--Card-->
+                            <div class="card">
+                                <!--Card image-->
+                                <div class="view overlay hm-white-slight">
+                                    <img src="img/cellPhenotype_thumbnail.jpg" class="img-fluid" alt="Image of Research">
+                                    <a href="">
+                                        <div class="mask"></div>
+                                    </a>
+                                </div>
+                                <!--Card content-->
+                                <div class="card-body">
+                                    <!--Title-->
+                                    <h4 class="card-title">Cell Phenotype Recognition</h4>
+                                    <!--Text-->
+                                    <p class="card-text">Our aim is to create an automated system to label a cells phenotype (observable characteristics)
+                                        based on what is shown in an image. The data set is far too large for a human expert
+                                        to analyse so must be done by a computer.</p>
+                                    <a href="/research.html#cellphenotype" class="btn btn-primary">Learn More</a>
+                                </div>
+                            </div>
+                            <!--/.Card-->
+                        </div>
+
+                        <div class="col">
+                            <!--Card-->
+                            <div class="card">
+                                <!--Card image-->
+                                <div class="view overlay hm-white-slight">
+                                    <img src="img/mri_thumbnail.jpg" class="img-fluid" alt="Image of Research">
+                                    <a href="">
+                                        <div class="mask"></div>
+                                    </a>
+                                </div>
+                                <!--Card content-->
+                                <div class="card-body">
+                                    <!--Title-->
+                                    <h4 class="card-title">MRI Scanning</h4>
+                                    <!--Text-->
+                                    <p class="card-text">With newer techniques, it is possible to produce images of smaller structures within
+                                        the human body. The key application is non-invasive procedures to aid diagnosis.
+                                        Currently, a biopsy require a sample to be removed from the patient.</p>
+                                    <a href="/research.html#mri" class="btn btn-primary">Learn More</a>
+                                </div>
+                            </div>
+                            <!--/.Card-->
+                        </div>
+
                     </div>
 
                     <h1 class="font-bold light-blue-text my-5">Who We are</h1>
@@ -195,76 +272,8 @@
 
                     </div>
                     <!--/.Card-->
-                    <h1 class="font-bold light-blue-text my-5">Our Work</h1>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <!--Card-->
-                        <div class="card">
-                            <!--Card image-->
-                            <div class="view overlay hm-white-slight">
-                                <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
-                                <a href="#">
-                                    <div class="mask"></div>
-                                </a>
-                            </div>
-                            <!--Card content-->
-                            <div class="card-body">
-                                <!--Title-->
-                                <h4 class="card-title">Research 1</h4>
-                                <!--Text-->
-                                <p class="card-text">Brief description of some cool research</p>
-                                <a href="/research.html" class="btn btn-primary">Learn More</a>
-                            </div>
-                        </div>
-                        <!--/.Card-->
-                    </div>
 
-                    <div class="col">
-                        <!--Card-->
-                        <div class="card">
-                            <!--Card image-->
-                            <div class="view overlay hm-white-slight">
-                                <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
-                                <a href="#">
-                                    <div class="mask"></div>
-                                </a>
-                            </div>
-                            <!--Card content-->
-                            <div class="card-body">
-                                <!--Title-->
-                                <h4 class="card-title">Research 2</h4>
-                                <!--Text-->
-                                <p class="card-text">Brief description of some cool research</p>
-                                <a href="/research.html" class="btn btn-primary">Learn More</a>
-                            </div>
-                        </div>
-                        <!--/.Card-->
-                    </div>
-
-                    <div class="col">
-                        <!--Card-->
-                        <div class="card">
-                            <!--Card image-->
-                            <div class="view overlay hm-white-slight">
-                                <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
-                                <a href="#">
-                                    <div class="mask"></div>
-                                </a>
-                            </div>
-                            <!--Card content-->
-                            <div class="card-body">
-                                <!--Title-->
-                                <h4 class="card-title">Research 3</h4>
-                                <!--Text-->
-                                <p class="card-text">Brief description of some cool research</p>
-                                <a href="/research.html" class="btn btn-primary">Learn More</a>
-                            </div>
-                        </div>
-                        <!--/.Card-->
-                    </div>
-
-                </div>
             </div>
     </main>
     <!-- /Start your project here-->
