--- a/research.html
+++ b/research.html
@@ -268,7 +268,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5">
+                        <div class="row pt-5" id="recognition">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-7 mb-3">
@@ -320,7 +320,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5">
+                        <div class="row pt-5" id="cellphenotype">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
@@ -435,7 +435,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5">
+                        <div class="row pt-5" id="mri">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-7 mb-3">
