--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
                             <a class="nav-link" href="/team-29.html">Team 29 Info</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav nav-flex-icons">
+                            <li class="nav-item">
+                                <a class="nav-link"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link"><i class="fa fa-instagram"></i></a>
+                            </li>
+                        </ul>
                     <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -320,6 +331,17 @@
                 <!--/.Second column-->
             </div>
         </div>
+        <div class="social-section text-center">
+                <ul>
+        
+                    <li><a class="btn-floating btn-sm btn-fb"><i class="fa fa-facebook"> </i></a></li>
+                    <li><a class="btn-floating btn-sm btn-tw"><i class="fa fa-twitter"> </i></a></li>
+                    <li><a class="btn-floating btn-sm btn-gplus"><i class="fa fa-google-plus"> </i></a></li>
+                    <li><a class="btn-floating btn-sm btn-li"><i class="fa fa-linkedin"> </i></a></li>
+                    <li><a class="btn-floating btn-sm btn-dribbble"><i class="fa fa-dribbble"> </i></a></li>
+        
+                </ul>
+            </div>
         <!--/.Footer Links-->
 
         <!--Copyright-->
