--- a/index.html
+++ b/index.html
@@ -57,16 +57,27 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav nav-flex-icons">
-                            <li class="nav-item">
-                                <a class="nav-link"><i class="fa fa-facebook"></i></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.facebook.com/UCLCS.Home/" target="_blank">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://twitter.com/uclcs" target="_blank">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.youtube.com/user/UCLComputerScience" target="_blank">
+                                <i class="fa fa-youtube"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                                <a class="nav-link" href="http://www.linkedin.com/groups?gid=4046543&trk=myg_ugrp_ovr" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link"><i class="fa fa-instagram"></i></a>
-                            </li>
-                        </ul>
+                    </ul>
                     <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -331,17 +342,6 @@
                 <!--/.Second column-->
             </div>
         </div>
-        <div class="social-section text-center">
-                <ul>
-        
-                    <li><a class="btn-floating btn-sm btn-fb"><i class="fa fa-facebook"> </i></a></li>
-                    <li><a class="btn-floating btn-sm btn-tw"><i class="fa fa-twitter"> </i></a></li>
-                    <li><a class="btn-floating btn-sm btn-gplus"><i class="fa fa-google-plus"> </i></a></li>
-                    <li><a class="btn-floating btn-sm btn-li"><i class="fa fa-linkedin"> </i></a></li>
-                    <li><a class="btn-floating btn-sm btn-dribbble"><i class="fa fa-dribbble"> </i></a></li>
-        
-                </ul>
-            </div>
         <!--/.Footer Links-->
 
         <!--Copyright-->
