--- a/team-29.html
+++ b/team-29.html
@@ -56,6 +56,28 @@
                             <a class="nav-link" href="#">Team 29 Info</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav nav-flex-icons">
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://www.facebook.com/UCLCS.Home/" target="_blank">
+                                    <i class="fa fa-facebook"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://twitter.com/uclcs" target="_blank">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://www.youtube.com/user/UCLComputerScience" target="_blank">
+                                    <i class="fa fa-youtube"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                    <a class="nav-link" href="http://www.linkedin.com/groups?gid=4046543&trk=myg_ugrp_ovr" target="_blank">
+                                        <i class="fa fa-linkedin"></i>
+                                    </a>
+                                </li>
+                        </ul>
                     <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
