Added image to get involved page.

--- a/get-involved.html
+++ b/get-involved.html
@@ -61,27 +61,27 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav nav-flex-icons">
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://www.facebook.com/UCLCS.Home/" target="_blank">
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://twitter.com/uclcs" target="_blank">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://www.youtube.com/user/UCLComputerScience" target="_blank">
-                                    <i class="fa fa-youtube"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                    <a class="nav-link" href="http://www.linkedin.com/groups?gid=4046543&trk=myg_ugrp_ovr" target="_blank">
-                                        <i class="fa fa-linkedin"></i>
-                                    </a>
-                                </li>
-                        </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.facebook.com/UCLCS.Home/" target="_blank">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://twitter.com/uclcs" target="_blank">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.youtube.com/user/UCLComputerScience" target="_blank">
+                                <i class="fa fa-youtube"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://www.linkedin.com/groups?gid=4046543&trk=myg_ugrp_ovr" target="_blank">
+                                <i class="fa fa-linkedin"></i>
+                            </a>
+                        </li>
+                    </ul>
                     <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -115,30 +115,60 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">Advice for University</h1>
-                    <p>Interested in going to university? Wanting to study Computer Vision and Imaging? We have the right advice
-                        for you! Studying Computer Science at UCL will give you the skills and knowledge you need to succeed
-                        in the industry. During your time here, there will be many opportunities to meet and volunteer at
-                        the research group to further your knowledge. Furthermore, we have a wide selection of modules you
-                        can take to specialise into Computer Vision:</p>
-                    <ul>
-                        <li>
-                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm054_machine_vision/" target="_blank">Machine Vision</a>
-                        </li>
-                        <li>
-                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/comp3072_image_processing/" target="_blank">Image Processing</a>
-                        </li>
-                        <li>
-                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm072_mathematical_methods_algorithms_and_implementations/"
-                                target="_blank">Mathmatical Methods</a>
-                        </li>
-                        <li>
-                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm077_computational_modelling_for_biomedical_imaging/"
-                                target="_blank">Biomedical Imaging</a>
-                        </li>
-                        <li>
-                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm081_geometry_of_images/" target="_blank">Geometry of Images</a>
-                        </li>
-                    </ul>
+                    <!--Grid row-->
+                    <div class="row pt-5" id="recognition">
+
+                        <!--Grid column-->
+                        <div class="col-lg-6 col-xl-7 mb-3">
+
+                            <!--Grid row-->
+                            <div class="row mb-3">
+                                <div class="col-1 mr-1">
+                                </div>
+                                <div class="col-10">
+                                    <p>Interested in going to university? Wanting to study Computer Vision and Imaging? We have
+                                        the right advice for you! Studying Computer Science at UCL will give you the skills
+                                        and knowledge you need to succeed in the industry. During your time here, there will
+                                        be many opportunities to meet and volunteer at the research group to further your
+                                        knowledge. Furthermore, we have a wide selection of modules you can take to specialise
+                                        into Computer Vision:</p>
+                                    <ul>
+                                        <li>
+                                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm054_machine_vision/" target="_blank">Machine Vision</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/comp3072_image_processing/" target="_blank">Image Processing</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm072_mathematical_methods_algorithms_and_implementations/"
+                                                target="_blank">Mathmatical Methods</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm077_computational_modelling_for_biomedical_imaging/"
+                                                target="_blank">Biomedical Imaging</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm081_geometry_of_images/" target="_blank">Geometry of Images</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!--Grid row-->
+
+                        </div>
+                        <!--Grid column-->
+
+                        <!--Grid column-->
+                        <div class="col-lg-6 col-xl-5 mb-3">
+
+                            <!--Image-->
+                            <img src="img/university.jpg" alt="University Image" class="img-fluid z-depth-2">
+
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
                     <h1 class="font-bold light-blue-text my-5">Upcoming Events</h1>
                     <p>Have a look at some of our upcoming events below. Come along and get involved!</p>
                 </div>
