--- a/research.html
+++ b/research.html
@@ -116,9 +116,7 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <h1 class="blue-text">
-                                            <strong>3D Scene Reconstruction</strong>
-                                        </h1>
+                                        <button class="btn blue-gradient btn-rounded"><big>3D Scene Reconstruction</big><br>click here</button>
                                     </div>
                                     <!-- Content -->
                                 </div>
@@ -132,11 +130,8 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <h1 class="blue-text">
-                                            <strong>Recognition</strong>
-                                        </h1>
+                                        <button class="btn peach-gradient btn-rounded"><big>Recognition</big><br>click here</button>
                                     </div>
-
                                     <!-- Content -->
                                 </div>
                             </div>
@@ -149,11 +144,8 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <h1 class="blue-text">
-                                            <strong>Motion Analysis</strong>
-                                        </h1>
+                                        <button class="btn aqua-gradient btn-rounded"><big>Motion Analysis</big><br>click here</button>
                                     </div>
-
                                     <!-- Content -->
                                 </div>
                             </div>
@@ -166,11 +158,8 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <h1 class="blue-text">
-                                            <strong>Cell Phenotype Recognition</strong>
-                                        </h1>
+                                        <button class="btn purple-gradient btn-rounded"><big>Cell Phenotype Recognition</big><br>click here</button>
                                     </div>
-
                                     <!-- Content -->
                                 </div>
                             </div>
@@ -183,9 +172,7 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <h1 class="blue-text">
-                                            <strong>Imaging with MRI</strong>
-                                        </h1>
+                                        <button class="btn aqua-gradient btn-rounded"><big>Imaging with MRI</big><br>click here</button>
                                     </div>
                                     <!-- Content -->
                                 </div>
@@ -200,9 +187,7 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <h1 class="blue-text">
-                                            <strong>Image-Understanding</strong>
-                                        </h1>
+                                        <button class="btn blue-gradient btn-rounded"><big>Image-Understanding</big><br>click here</button>
                                     </div>
                                     <!-- Content -->
                                 </div>
